--- a/po/vi.po
+++ b/po/vi.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma 2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-07-22 12:34+0200\n"
-"PO-Revision-Date: 2019-07-22 12:35+0200\n"
+"POT-Creation-Date: 2019-07-23 12:20+0200\n"
+"PO-Revision-Date: 2019-07-23 16:42+0200\n"
 "Last-Translator: krong\n"
 "Language-Team: none\n"
 "Language: vi\n"
@@ -152,13 +152,13 @@ msgid " (disabled)"
 msgstr " (cho phép/không cho phép)"
 
 msgid " (higher than any auto)"
-msgstr " (cao hơn bất kỳ ô tô nào)"
+msgstr " (chế độ tự động cao)"
 
 msgid " (higher than rotor any auto)"
-msgstr " (cao hơn rôto bất kỳ ô tô nào)"
+msgstr " (chế độ động cơ tự động cao hơn)"
 
 msgid " (lower than any auto)"
-msgstr " (thấp hơn bất kỳ ô tô nào)"
+msgstr " (chế độ tự động thấp hơn)"
 
 msgid " extensions."
 msgstr " phần mở rộng."
@@ -1669,10 +1669,10 @@ msgstr "Kênh và EPG"
 
 #, python-format
 msgid "Channels from fallback tuner failed %s"
-msgstr "Các kênh từ bộ chỉnh dự bị không thành công %s"
+msgstr "Nhập từ bộ điều chỉnh dự phòng không thành công,%s"
 
 msgid "Channels from fallback tuner imported"
-msgstr "Kênh từ bộ chỉnh dự bị nhập"
+msgstr "Khi được bật, bộ hẹn giờ từ bộ điều chỉnh dự phòng được nhập"
 
 msgid "Channels only"
 msgstr "Chỉ các kênh"
@@ -1728,7 +1728,7 @@ msgid "Choose Tuner"
 msgstr "Chọn bộ chỉnh"
 
 msgid "Choose bouquet"
-msgstr "Chọn bó hoa"
+msgstr "Chọn gói kênh"
 
 msgid "Choose which tuner to configure."
 msgstr "Chọn bộ chỉnh nào để cấu hình."
@@ -2370,7 +2370,7 @@ msgid "Customize channel list cursor behavior"
 msgstr "Tùy chỉnh hành vi con trỏ danh sách kênh"
 
 msgid "Cut"
-msgstr "Cắt tỉa"
+msgstr "Cắt"
 
 msgid "Cutlist editor"
 msgstr "Biên tập danh sách cắt"
@@ -2412,7 +2412,7 @@ msgid "DVB CI Delay"
 msgstr "Sự chậm trễ của DVB CI"
 
 msgid "DVB Subtitles PID & lang"
-msgstr "Phụ đề DVB & lang"
+msgstr "Phụ đề DVB & ngôn ngữ"
 
 msgid "DVB driver version: "
 msgstr "Phiên bản trình điều khiển DVB: "
@@ -2478,10 +2478,10 @@ msgid "Debug to file"
 msgstr "Gỡ lỗi để tập tin"
 
 msgid "Deep Standby LED"
-msgstr "Đèn LED chờ sâu"
+msgstr "Đèn LED chờ"
 
 msgid "Deep standby"
-msgstr "Chế độ chờ sâu"
+msgstr "Chế độ chờ"
 
 msgid "Default"
 msgstr "Mặc định"
@@ -2902,10 +2902,10 @@ msgid "Don't zap"
 msgstr "Đừng bình tĩnh"
 
 msgid "Don't zap and disable timer"
-msgstr "Không zap và vô hiệu hóa bộ đếm thời gian"
+msgstr "Không  và vô hiệu hóa bộ đếm thời gian"
 
 msgid "Don't zap and remove timer"
-msgstr "Không zap và loại bỏ bộ đếm thời gian"
+msgstr "Không  và loại bỏ bộ đếm thời gian"
 
 msgid "Done"
 msgstr "Làm xong"
@@ -3382,7 +3382,7 @@ msgid "Exit the wizard"
 msgstr "Thoát khỏi trình hướng dẫn"
 
 msgid "Exit/OK"
-msgstr "Thoát / OK"
+msgstr "Thoát / Đồng ý"
 
 msgid "Expand"
 msgstr "Mở rộng"
@@ -3505,7 +3505,7 @@ msgid ""
 "\n"
 "Do you really want to proceed?"
 msgstr ""
-"Khôi phục cài đặt gốc sẽ khôi phục máy thu của bạn về cấu hình mặc định. Tất cả dữ liệu người dùng bao gồm cài đặt hệ thống, cấu hình bộ chỉnh, bó hoa, dịch vụ và plugin sẽ bị xóa. Các bản ghi và các tệp khác được lưu trữ trên ổ cứng và USB sẽ vẫn còn nguyên. Sau khi hoàn thành, hệ thống sẽ tự động khởi động lại!\n"
+"Khôi phục cài đặt gốc sẽ khôi phục máy thu của bạn về cấu hình mặc định. Tất cả dữ liệu người dùng bao gồm cài đặt hệ thống, cấu hình bộ chỉnh, gói kênh, dịch vụ và plugin sẽ bị xóa. Các bản ghi và các tệp khác được lưu trữ trên ổ cứng và USB sẽ vẫn còn nguyên. Sau khi hoàn thành, hệ thống sẽ tự động khởi động lại!\n"
 "\n"
 "Bạn có thực sự muốn tiến hành?"
 
@@ -4526,7 +4526,7 @@ msgid "Language"
 msgstr "Ngôn ngữ"
 
 msgid "Language selection"
-msgstr "Sự lựa chọn ngôn ngữ"
+msgstr "Lựa chọn ngôn ngữ"
 
 msgid "Lao People's Democratic Republic"
 msgstr "Cộng hòa Dân chủ nhân dân Lào"
@@ -5368,7 +5368,7 @@ msgid "No, never"
 msgstr "Không bao giờ"
 
 msgid "None"
-msgstr "Không ai"
+msgstr "Không"
 
 #. TRANSLATORS: (aspect ratio policy: display as fullscreen, with stretching the left/right)
 msgid "Nonlinear"
@@ -5450,7 +5450,7 @@ msgid "Number or SMS style data entry"
 msgstr "Nhập dữ liệu kiểu số hoặc SMS"
 
 msgid "OK"
-msgstr "Được"
+msgstr "Đồng ý"
 
 msgid "ONID"
 msgstr "ONID"
@@ -5477,7 +5477,7 @@ msgid "Offline decode delay (ms)"
 msgstr "Độ trễ giải mã ngoại tuyến (ms)"
 
 msgid "Ok"
-msgstr "Được"
+msgstr "Đồng ý"
 
 msgid "Oman"
 msgstr "Ô-man"
@@ -5558,7 +5558,7 @@ msgid "Overall progress:"
 msgstr "Tiến độ tổng thể:"
 
 msgid "Overscan wizard"
-msgstr "Overscan wizard"
+msgstr "Chỉnh sửa màn hình"
 
 msgid "Overwrite configuration files during software upgrade?"
 msgstr "Ghi đè tập tin cấu hình trong quá trình nâng cấp phần mềm?"
@@ -6416,10 +6416,10 @@ msgid "Reflash recommended!"
 msgstr "Đề nghị phản xạ!"
 
 msgid "Refresh"
-msgstr "Làm tươi"
+msgstr "Làm mới"
 
 msgid "Refresh rate"
-msgstr "Tốc độ làm tươi"
+msgstr "Tốc độ quét"
 
 msgid "Refresh rate selection."
 msgstr "Làm mới lựa chọn tỷ lệ."
@@ -6446,7 +6446,7 @@ msgid "Reload blacklists"
 msgstr "Tải lại danh sách đen"
 
 msgid "Reloading bouquets and services..."
-msgstr "Tải lại bó hoa và dịch vụ ..."
+msgstr "Tải lại gói kênh và dịch vụ ..."
 
 msgid "Remember last service in PiP"
 msgstr "Ghi nhớ dịch vụ cuối cùng trong PiP"
@@ -6672,7 +6672,7 @@ msgid "Rewrap subtitles"
 msgstr "Viết lại phụ đề"
 
 msgid "Right"
-msgstr "Đúng"
+msgstr "Phải"
 
 msgid "Right from servicename"
 msgstr "Ngay từ tên dịch vụ"
@@ -6926,8 +6926,8 @@ msgstr "Quét%s ..."
 #, python-format
 msgid "Scanning - %d%% completed"
 msgid_plural "Scanning - %d%% completed"
-msgstr[0] "Quét - hoàn thành %d%%"
-msgstr[1] "Quét - hoàn thành %d%%"
+msgstr[0] "Quét%d%% - hoàn thành"
+msgstr[1] "Quét - %d%%hoàn thành"
 
 #, python-format
 msgid "Scanning completed, %d channel found"
@@ -7159,7 +7159,7 @@ msgid "Select interface"
 msgstr "Chọn giao diện"
 
 msgid "Select locale"
-msgstr "Chọn miền địa phương"
+msgstr "Chọn địa điểm"
 
 msgid "Select location"
 msgstr "Chọn địa điểm"
@@ -7386,7 +7386,7 @@ msgid "Service scan"
 msgstr "Quét dịch vụ"
 
 msgid "Service searching"
-msgstr "Dịch vụ tìm kiếm"
+msgstr "Quét tìm dịch vụ"
 
 msgid "Service title mode"
 msgstr "Chế độ tiêu đề dịch vụ"
@@ -7774,7 +7774,7 @@ msgid "Sierra Leone"
 msgstr "Sierra Leone"
 
 msgid "Signal OK, proceeding"
-msgstr "Tín hiệu OK, tiến hành"
+msgstr "Tín hiệu TỐT, tiến hành"
 
 msgid "Signal finder"
 msgstr "Công cụ tìm tín hiệu"
@@ -8509,7 +8509,7 @@ msgstr ""
 
 #, python-format
 msgid "The %d min remaining before the end of the event."
-msgstr "%d phút còn lại trước khi kết thúc sự kiện."
+msgstr "Dây%d phút còn lại trước khi kết thúc sự kiện."
 
 msgid "The DVD standard doesn't support H.264 (HDTV) video streams. Do you want to create a special format data DVD (which will not play in stand-alone DVD players) instead?"
 msgstr "Chuẩn DVD không hỗ trợ luồng video H.264 (HDTV). Bạn có muốn tạo một DVD dữ liệu định dạng đặc biệt (thay vào đó sẽ không phát trong các đầu DVD độc lập) không?"
@@ -8556,7 +8556,7 @@ msgid ""
 "\n"
 "Menu->Installation->System->Audio/Video->Overscan wizard"
 msgstr ""
-"Thuật sĩ quét quá mức đã được hoàn thành.\n"
+"Thuật sĩ quét nâng cao đã được hoàn thành.\n"
 "\n"
 "Lưu ý: bạn luôn có thể khởi động Trình hướng dẫn quét sau, thông qua\n"
 "\n"
@@ -8624,7 +8624,7 @@ msgid "The timer file (timers.xml) is corrupt and could not be loaded."
 msgstr "Tệp hẹn giờ (timers.xml) bị hỏng và không thể tải được."
 
 msgid "The user interface of the receiver will now restart to select the selected skin"
-msgstr "Giao diện người dùng của người nhận bây giờ sẽ khởi động lại để chọn giao diện đã chọn"
+msgstr "Giao diện người dùng của đầu thu bây giờ sẽ khởi động lại để chọn giao diện đã chọn"
 
 msgid "The user interface of your receiver is restarting"
 msgstr "Giao diện người dùng của máy thu của bạn đang khởi động lại"
@@ -8768,7 +8768,7 @@ msgid "This option allows you to force the HLG modes for UHD"
 msgstr "Tùy chọn này cho phép bạn buộc các chế độ HLG cho UHD"
 
 msgid "This option allows you to hide and sort menu entries. When selecting user you can change order and hide menu items via the blue button"
-msgstr "Tùy chọn này cho phép bạn ẩn và sắp xếp các mục menu. Khi chọn người dùng, bạn có thể thay đổi thứ tự và ẩn các mục menu qua nút màu xanh"
+msgstr "Tùy chọn này cho phép bạn ẩn và sắp xếp các mục menu. Khi chọn người dùng, bạn có thể thay đổi thứ tự và ẩn các mục menu thông qua nút màu xanh. Với người dùng được xác định ẩn, nút màu xanh không hiển thị trong menu"
 
 msgid "This option allows you to power off the display."
 msgstr "Tùy chọn này cho phép bạn tắt nguồn màn hình."
@@ -11006,7 +11006,7 @@ msgid "no storage devices found"
 msgstr "không tìm thấy thiết bị lưu trữ"
 
 msgid "none"
-msgstr "không ai"
+msgstr "không"
 
 msgid "normal"
 msgstr "bình thường"
@@ -11096,7 +11096,7 @@ msgid "popular culture/traditional arts"
 msgstr "văn hóa đại chúng / nghệ thuật truyền thống"
 
 msgid "pre-school children's program"
-msgstr "chương trình trẻ em mẫu giáo"
+msgstr "chương trình trẻ em"
 
 msgid "purge deleted userbouquets"
 msgstr "thanh lọc người dùng đã xóa"
@@ -11234,7 +11234,7 @@ msgid "service is in bouquet parental protection"
 msgstr "dịch vụ là trong bó hoa bảo vệ cha mẹ"
 
 msgid "service off-air"
-msgstr "dịch vụ ngoài không khí"
+msgstr "dịch vụ ngoài không gian"
 
 msgid "set as startup service"
 msgstr "đặt làm dịch vụ khởi động"
